new test (aun no lo tenemos)

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <label for="aprendizaje">Aprendizaje o Reflexión:</label><br>
         <input type="text" id="aprendizaje" name="aprendizaje" required><br><br>
         
-        <button type="submit">Agregar Entrada</button>
+        <button type="button" id="copyButton">Generar Comando y Copiar</button>
     </form>
 
     <table id="registroTabla">
