añadir instrucciones de uso

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -9,6 +8,19 @@
 </head>
 <body>
     <h1>Registro de Pensamiento, Emoción, Conducta y Aprendizaje</h1>
+    
+    <section id="instrucciones">
+        <h2>Instrucciones de Uso</h2>
+        <p>Sigue estos pasos para utilizar la aplicación:</p>
+        <ol>
+            <li>Rellena los campos del formulario con la información correspondiente.</li>
+            <li>Haz clic en el botón <strong>"Generar Comando y Copiar"</strong> para generar un comando que se copiará automáticamente al portapapeles.</li>
+            <li>Abre tu terminal y navega al directorio raíz del proyecto.</li>
+            <li>Pega y ejecuta el comando copiado en la terminal para añadir la entrada al registro.</li>
+            <li>Refresca esta página para ver las nuevas entradas añadidas.</li>
+        </ol>
+    </section>
+
     <form id="registroForm">
         <label for="situacion">Situación y Fecha:</label><br>
         <input type="text" id="situacion" name="situacion" required><br><br>
