--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
             <li>Haz clic en el botón <strong>"Generar Comando y Copiar"</strong> para generar un comando que se copiará automáticamente al portapapeles.</li>
             <li>Abre tu terminal y navega al directorio raíz del proyecto.</li>
             <li>Pega y ejecuta el comando copiado en la terminal para añadir la entrada al registro.</li>
-            <li>Refresca esta página para ver las nuevas entradas añadidas.</li>
+            <li>No te olvides de hacer un git push para que se actualice en github</li>
+            <li>Espera unos minutos y refresca esta página para ver las nuevas entradas añadidas.</li>
         </ol>
     </section>
 
